--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walidacja formularza</title>
+    <link rel="manifest" href="./manifest.json"> <!--nowe-->
+    <meta name="theme-color"
+    content="#873694"> <!--nowe-->
 </head>
 <body>
     <!-- część <body> zawiera elementy html wyświetlane użytkownikowi w oknie przeglądarki-->
@@ -47,6 +50,6 @@
      <footer>
         <p>Projekt WSB Merito Gdynia 2025</p>
      </footer>
-     <script src="./script.js"></script>
+     <script src="./script.js"></script> <!--nowe-->
 </body>
 </html>
