--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
      <footer>
         <p>Projekt WSB Merito Gdynia 2025</p>
      </footer>
-     <script src="./script.js"></script> <!--nowe-->
+     <script src="./script.js"></script> 
+     <script src="./sw.js"></script> <!--nowe-->
 </body>
 </html>
